--- a/Faketotron.html
+++ b/Faketotron.html
@@ -799,6 +799,133 @@ function readPhaseFromForm(varType){
 function deepCopy(obj){ return JSON.parse(JSON.stringify(obj)); }
 function getActiveGroup(){ return groups.find(x=>x.id===activeGroupId); }
 
+// Behavior when values are out-of-range: 'clamp' | 'reject' | 'warn'
+let PASTE_VALIDATION_MODE = 'clamp';
+
+function clamp(n, lo, hi){ return Math.min(hi, Math.max(lo, n)); }
+
+function validatePhaseForTarget(varType, phase, mode='clamp'){
+  const rng = RANGES[varType];
+  if(!rng) return { ok:true, fixed: phase, issues: [] };
+
+  // humidity cloud exception (same as buildPhaseFields UI hint)
+  const effRangeForCloud = (varType==='Humidity')
+    ? { min: 0, max: 100, scale: rng.scale }   // amplitude/offset use 0–100 for humidity
+    : rng;
+
+  const isTemp = (varType === 'Temperature');
+  const mustInt = (k)=> !isTemp; // Temperature allows decimals in UI, stored ×10 here
+
+  const issues = [];
+  const out = deepCopy(phase);
+
+  const handle = (key, lo, hi, requireInt=true, target='rng')=>{
+    if(out[key] == null) return;
+    let v = Number(out[key]);
+    if(!Number.isFinite(v)){
+      issues.push(`${key} not a number`);
+      if(mode==='reject') return false;
+      return true; // leave as-is for warn
+    }
+    if(requireInt && !Number.isInteger(v)){
+      issues.push(`${key} must be an integer`);
+      if(mode==='reject') return false;
+      if(mode==='clamp'){ v = Math.round(v); }
+    }
+    if(v < lo || v > hi){
+      if(mode==='reject'){ issues.push(`${key} ${v} out of [${lo}, ${hi}]`); return false; }
+      if(mode==='clamp'){ const nv = clamp(v, lo, hi); issues.push(`${key} ${v} → ${nv}`); v = nv; }
+      if(mode==='warn'){ issues.push(`${key} ${v} outside [${lo}, ${hi}]`); }
+    }
+    out[key] = v;
+    return true;
+  };
+
+  const checkDur = (k)=>{
+    if(out[k]==null) return true;
+    const n = normalizeDurationStr(out[k]);
+    if(!n){ issues.push(`${k} invalid duration`); return mode!=='reject'; }
+    out[k]=n; return true;
+  };
+
+  // Validate per type
+  if(out.type === 'const'){
+    if(!handle('value', rng.min, rng.max, mustInt('value'))) return {ok:false, fixed: out, issues};
+  }
+  else if(out.type === 'ramp'){
+    if(!checkDur('duration')) return {ok:false, fixed: out, issues};
+    if(!handle('start', rng.min, rng.max, mustInt('start'))) return {ok:false, fixed: out, issues};
+    if(!handle('end',   rng.min, rng.max, mustInt('end')))   return {ok:false, fixed: out, issues};
+    // keep step as-is (fixed in UI)
+  }
+  else if(out.type === 'sin'){
+    if(!checkDur('duration')) return {ok:false, fixed: out, issues};
+    if(!checkDur('period'))   return {ok:false, fixed: out, issues};
+    if(!checkDur('phaseOffset')) return {ok:false, fixed: out, issues};
+    if(!handle('min', rng.min, rng.max, mustInt('min'))) return {ok:false, fixed: out, issues};
+    if(!handle('max', rng.min, rng.max, mustInt('max'))) return {ok:false, fixed: out, issues};
+    // swap if inverted
+    if(Number(out.min) > Number(out.max)){
+      if(mode==='reject'){ issues.push('min > max'); return {ok:false, fixed: out, issues}; }
+      issues.push(`swapped min/max ${out.min}/${out.max}`);
+      const t = out.min; out.min = out.max; out.max = t;
+    }
+  }
+  else if(out.type === 'cloud'){
+    if(!checkDur('duration')) return {ok:false, fixed: out, issues};
+    // fixed fields present in UI:
+    // amplitude/offset against effRangeForCloud:
+    if(!handle('amplitude', effRangeForCloud.min, effRangeForCloud.max, mustInt('amplitude'))) return {ok:false, fixed: out, issues};
+    if(!handle('offset',    effRangeForCloud.min, effRangeForCloud.max, mustInt('offset')))    return {ok:false, fixed: out, issues};
+    // density/position: 0–100 integers
+    if(!handle('cloud_density', 0, 100, true))  return {ok:false, fixed: out, issues};
+    if(!handle('cloud_position', 0, 100, true)) return {ok:false, fixed: out, issues};
+    // integer mins/vars
+    if(!handle('cloud_duration_mean', -1e9, 1e9, true)) return {ok:false, fixed: out, issues};
+    if(!handle('cloud_duration_var',  -1e9, 1e9, true)) return {ok:false, fixed: out, issues};
+    if(typeof out.fluctuation_mean_ratio !== 'undefined'){
+      const fmr = Number(out.fluctuation_mean_ratio);
+      if(!Number.isFinite(fmr)){
+        issues.push('fluctuation_mean_ratio not a number'); if(mode==='reject') return {ok:false,fixed:out,issues};
+      }else{
+        // keep as-is; UI rounds to 2 decimals, but we won't force rounding here
+        out.fluctuation_mean_ratio = Math.round(fmr*100)/100;
+      }
+    }
+    if(typeof out.fluctuation_var !== 'undefined'){
+      const fv = Number(out.fluctuation_var);
+      if(!Number.isInteger(fv)){
+        if(mode==='reject'){ issues.push('fluctuation_var must be an integer'); return {ok:false,fixed:out,issues}; }
+        issues.push('fluctuation_var coerced to integer'); out.fluctuation_var = Math.round(fv);
+      }
+    }
+    if(typeof out.cloud_drop_coeff !== 'undefined'){
+      const cdc = Number(out.cloud_drop_coeff);
+      if(!Number.isFinite(cdc)){
+        issues.push('cloud_drop_coeff not a number'); if(mode==='reject') return {ok:false,fixed:out,issues};
+      }else{
+        out.cloud_drop_coeff = Math.round(cdc*100)/100;
+      }
+    }
+  }
+
+  return { ok: (mode!=='reject') || issues.length===0, fixed: out, issues };
+}
+
+function validateClipboardForTarget(varType, phases, mode='clamp'){
+  const fixed = [];
+  const issues = [];
+  let allOk = true;
+  phases.forEach((p, idx)=>{
+    const { ok, fixed: fp, issues: is } = validatePhaseForTarget(varType, p, mode);
+    if(is.length) is.forEach(m => issues.push(`Phase ${idx+1}: ${m}`));
+    if(!ok) allOk = false;
+    fixed.push(fp);
+  });
+  return { ok: allOk, fixed, issues };
+}
+
+
 function updatePhaseToolsState(){
   const g = getActiveGroup();
   const hasSel = selectedPhaseIdx.size > 0;
@@ -837,16 +964,33 @@ $('#btnCopyPhases').onclick = ()=>{
 
 $('#btnPastePhases').onclick = ()=>{
   const g = getActiveGroup(); if(!g || !phaseClipboard || phaseClipboard.length===0){ return; }
+  const varType = g.type; // e.g., "CO2", "Cool White", "Temperature", "Amber" (Daylight), etc.
+
+  // Validate against CURRENT profile limits (RANGES is rebuilt on applyProfile)
+  const { ok, fixed, issues } = validateClipboardForTarget(varType, phaseClipboard, PASTE_VALIDATION_MODE);
+
+  if(PASTE_VALIDATION_MODE === 'reject' && !ok){
+    alert('Paste aborted:\n\n' + issues.join('\n'));
+    return;
+  }
+  if(issues.length){
+    alert(
+      (PASTE_VALIDATION_MODE==='clamp' ? 'Pasted with corrections:' :
+       PASTE_VALIDATION_MODE==='warn'  ? 'Pasted with warnings:'    : 'Issues:') +
+      '\n\n' + issues.join('\n')
+    );
+  }
+
   const after = (selectedPhaseIdx.size>0) ? Math.max(...selectedPhaseIdx) : (g.phases.length-1);
   const at = Math.max(0, after+1);
-  const clones = deepCopy(phaseClipboard);
+  const clones = deepCopy(fixed);
   g.phases.splice(at, 0, ...clones);
 
-  // select the newly inserted block
   clearSelection();
   for(let k=0; k<clones.length; k++){ selectedPhaseIdx.add(at+k); }
   renderPhases(); updateGroupDurationField(); updateOverallDuration();
 };
+
 
 $('#btnMoveSelUp').onclick = ()=>{
   const g = getActiveGroup(); if(!g) return;
